--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: UTAR ROBOCON Team (Sg Long Campus)
+description: This is the homepage for UTAR ROBOCON Team from Sg Long Campus
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://utarroboconteam.github.io
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
